# workiqiwthorchestration

./: .env.sample  .gitignore  PLAN.md  README.md  azure.yaml  build_html.py
.github/: copilot-instructions.md
agents/: e2e_smoke_test.py  requirements.txt
agents/legal/: README.md  create_agent.py  smoke_test.py  system_prompt.md
agents/shared/: __init__.py  foundry_client.py  mcp_tool_def.py
agents/submissions/: README.md  create_agent.py  smoke_test.py  system_prompt.md
agents/tax/: README.md  create_agent.py  smoke_test.py  system_prompt.md
chat-api/: .dockerignore  Dockerfile  README.md  pyproject.toml  smoke_test.py
chat-api/agents_prompts/legal/: system_prompt.md
chat-api/agents_prompts/submissions/: system_prompt.md
chat-api/agents_prompts/tax/: system_prompt.md
chat-api/src/chat_api/: __init__.py  af_orchestrator.py  auth.py  bootstrap.py  config.py  foundry_credential.py  main.py  sessions.py  sse.py  token_validator.py  tools.py  transcript.py
chat-api/src/chat_api/routes/: health.py  sessions.py
chat-api/tests/: test_auth.py  test_orchestrator.py  test_sessions_memory.py  test_tools_mcp.py
chat-ui/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
chat-ui/src/: App.tsx  api.ts  main.tsx  (+3 more)
docs/: observability.md
infra/: README.md  main.bicep  main.bicepparam  main.json  main.parameters.json
mcp-server/: .dockerignore  Dockerfile  README.md  pyproject.toml  smoke_test.py
mcp-server/src/mcp_server/: __init__.py  cosmos_repo.py  logging_setup.py  models.py  server.py
mcp-server/tests/: conftest.py  test_profiles.py  test_tools.py  test_user_token_header.py
reference_code/: create_legal_agent_simple.py  create_tax_agent_simple.py  legal_system_prompt.md  tax_system_prompt.md
scripts/: deploy.ps1  iter5-create-app-regs.ps1  iter5-grant-consent.ps1
(+37 files in other folders)
